--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE-edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="./watch/script.js" defer></script>
     <title>Document</title>
     <style>
       #list {
@@ -13,7 +14,7 @@
     </style>
   </head>
   <body>
-    <div id="app"></div>
+    <!-- <div id="app"></div> -->
     <ul id="list"></ul>
     <form id="new-task-form">
       <input type="text" id="new-task-title" />
